--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,7 +1,12 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #0f0f0f;
+  color: #fff;
 }
-a {
-  color: #00b7ff;
+.content {
+  max-width: 100%;
+  margin-top: 40px;
+}
+#my-dropzone {
+  background-color: #dfdfdf;
 }
