--- a/public/style/style.styl
+++ b/public/style/style.styl
@@ -1,5 +1,11 @@
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-a
-  color: #00B7FF
+	padding: 50px
+	background-color: #0f0f0f
+	color: white
+
+.content
+	max-width: 100%
+	margin-top: 40px
+
+#my-dropzone
+	background-color: #dfdfdf
