--- a/src/files/assets/css/main.css
+++ b/src/files/assets/css/main.css
@@ -160,19 +160,21 @@ hr {
 	margin: 0 20px 10px 20px;
 }
 .sidebar ul li {
-	font-size: 16px;
+	font-size: 12px;
 	margin: 0;
-	line-height: 16px;
+	line-height: 12px;
 }
 
 @media only screen and (max-width: 679px) {
 	.sidebar {
-		position: relative;
+		position: static;
 		padding: 20px;
 		width: 100%;
-		height: 200px;
+		min-height: 200px;
 		border-right: 0;
 		border-top: 1px solid white;
+		margin: 0 0 0 0;
+		padding: 20px 0 0 200px;
 	}
 	.content {
 		margin: 90px 20px 20px 20px;
