--- a/src/files/assets/css/main.css
+++ b/src/files/assets/css/main.css
@@ -3,9 +3,9 @@ body {
 /*	font-family: 'VT323', sans-serif; */
 	font-family: '04b03';
 	font-weight: 400;
-	font-size: 16px;
+	font-size: 14px;
 	color: #fdfdfd;
-	text-align: center;
+	text-align: left;
 	-webkit-font-smoothing: antialiased;
 	-webkit-overflow-scrolling: touch;
 	margin:0;
@@ -35,8 +35,8 @@ p, li, blockquote {
 }
 
 li {
-	list-style: none;
-	line-height: 0;
+	list-style: circle;
+	line-height: 20px;
 }
 ul {
 	padding: 0;
