player login integration, started on theme integration

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -43,12 +43,14 @@ body {
   margin: -15px 15px -15px 0;
 }
 
+
+
 .navbar-brand {
-  background-image: url('../img/npm-logo.png');
+  background-image: url('/assets/img/logo.png');
   background-repeat: no-repeat;
-  background-size: 40px;
+  background-size: 150px;
   background-position: left center;
-  padding-left: 50px;
+  padding-left: 150px;
   margin-left: 15px;
   height: 45px;
 }
