--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   form(method='POST')
     legend Sign In
-    input(type='hidden', name='_csrf', value=_csrf)
+    input(type='hidden', name='_csrf', value=token)
     .col-sm-8.col-sm-offset-2
       if secrets.localAuth
         .form-group
