--- a/views/account/profile.jade
+++ b/views/account/profile.jade
@@ -5,17 +5,31 @@ block content
     h3 Profile Information
 
   form.form-horizontal(action='/account/profile', method='POST')
-    input(type='hidden', name='_csrf', value=_csrf)
+    input(type='hidden', name='_csrf', value=token)
     .form-group
-      label.col-sm-2.control-label(for='email') Email
+      label.col-sm-3.control-label(for='player') Starbound Name
+      .col-sm-4
+        input.form-control(type='player', name='player', id='player', value='#{user.profile.player}')
+      .col-sm-4
+        p whatever you use to vote with
+    .form-group
+      label.col-sm-3.control-label(for='forum') Forum Username
+      .col-sm-4
+        input.form-control(type='forum', name='forum', id='forum', value='#{user.profile.forum}')
+    //- .form-group
+      label.col-sm-3.control-label(for='invites') Invites
+      .col-sm-4
+        input.form-control(type='text', name='invites', id='invites', value='#{user.invites}', disabled)
+    .form-group
+      label.col-sm-3.control-label(for='email') Email
       .col-sm-4
         input.form-control(type='email', name='email', id='email', value='#{user.email}')
     .form-group
-      label.col-sm-2.control-label(for='name') Name
+      label.col-sm-3.control-label(for='name') TeamSpeak Handle
       .col-sm-4
         input.form-control(type='text', name='name', id='name', value='#{user.profile.name}')
     .form-group
-      label.col-sm-2.control-label(for='gender') Gender
+      label.col-sm-3.control-label(for='gender') Gender
       .col-sm-4
         label.radio
           input(type='radio', checked=user.profile.gender=='male', name='gender', value='male', data-toggle='radio')
@@ -24,19 +38,27 @@ block content
           input(type='radio', checked=user.profile.gender=='female', name='gender', value='female', data-toggle='radio')
           span Female
     .form-group
-      label.col-sm-2.control-label(for='location') Location
+      label.col-sm-3.control-label(for='location') Location
       .col-sm-4
         input.form-control(type='text', name='location', id='location', value='#{user.profile.location}')
     .form-group
-      label.col-sm-2.control-label(for='website') Website
+      label.col-sm-3.control-label(for='website') Website
       .col-sm-4
         input.form-control(type='text', name='website', id='website', value='#{user.profile.website}')
     .form-group
-      label.col-sm-2.control-label(for='gravatar') Gravatar
+      label.col-sm-3.control-label(for='gravatar') Gravatar
       .col-sm-4
         img(src="#{user.gravatar()}", class='profile', width='100', height='100')
+    //- .form-group
+      label.col-sm-3.control-label(for='starbound_password') Starbound Password
+      .col-sm-4
+        input.form-control(type='text', name='starbound_password', id='starbound_password', value='#{user.profile.starbound_password}')
+    //- .form-group
+      label.col-sm-3.control-label(for='server_tokens') Tokens
+      .col-sm-4
+        input.form-control(type='text', name='server_tokens', id='server_tokens', value='#{user.profile.server_tokens}', disabled)
     .form-group
-      .col-sm-offset-2.col-sm-4
+      .col-sm-offset-3.col-sm-4
         button.btn.btn.btn-primary(type='submit')
           i.fa.fa-magnet
           | Update Profile
@@ -47,7 +69,7 @@ block content
       h3 Change Password
 
     form.form-horizontal(action='/account/password', method='POST')
-      input(type='hidden', name='_csrf', value=_csrf)
+      input(type='hidden', name='_csrf', value=token)
       .form-group
         label.col-sm-3.control-label(for='password') New Password
         .col-sm-4
@@ -62,11 +84,11 @@ block content
             i.fa.fa-keyboard-o
             | Change Password
 
-  .page-header
+  //- .page-header
     h3 Delete Account
 
-  p You can delete your account, but keep in mind this action is irreversible.
-  form(action='/account/delete', method='POST')
+  //- p You can delete your account, but keep in mind this action is irreversible.
+  //- form(action='/account/delete', method='POST')
     input(type='hidden', name='_csrf', value=token)
     button.btn.btn-danger(type='submit')
       i.fa.fa-trash-o
