--- a/views/account/reset.jade
+++ b/views/account/reset.jade
@@ -4,7 +4,7 @@ block content
   .col-sm-8.col-sm-offset-2
     form(method='POST')
       legend Reset Password
-      input(type='hidden', name='_csrf', value=_csrf)
+      input(type='hidden', name='_csrf', value=token)
       .form-group
         label(for='password') New Password
         input.form-control(type='password', name='password', value='', placeholder='New password', autofocus=true)
