--- a/views/contact.jade
+++ b/views/contact.jade
@@ -5,7 +5,7 @@ block content
     h3 Contact Form
 
   form.form-horizontal(role='form', method='POST')
-    input(type='hidden', name='_csrf', value=_csrf)
+    input(type='hidden', name='_csrf', value=token)
     .form-group
       label(class='col-sm-2 control-label', for='name') Name
       .col-sm-8
