--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -4,6 +4,64 @@
 @import "lib/bootstrap-social";
 @import "themes/default";
 
+body {
+  background-color: black;
+/*  font-family: 'VT323', sans-serif; */
+  font-family: '04b03';
+  font-weight: 400;
+  font-size: 14px;
+  color: #fdfdfd;
+  text-align: left;
+  -webkit-font-smoothing: antialiased;
+  -webkit-overflow-scrolling: touch;
+  margin:0;
+}
+img {
+  max-width: 100%;
+}
+
+/* Links */
+a {
+  color: #fdfdfd;
+  word-wrap: break-word;
+  -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+  transition: color 0.1s ease-in, background 0.1s ease-in;
+}
+a:hover,
+a:focus {
+  color: #2883d1;
+  text-decoration: none;
+  outline: 0;
+}
+
+a:before,
+a:after {
+  -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+  transition: color 0.1s ease-in, background 0.1s ease-in;
+}
+
+.navbar .container {
+  background: none;
+  border: none;
+}
+
+.navbar-fixed-top {
+  margin: 10px 0;
+  background: rgba( 24, 24, 24, 0.7 );
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+}
+.container {
+  background: rgba( 24, 24, 24, 0.7 );
+  border: 1px solid white;
+}
+
 // Scaffolding
 // -------------------------
 
