--- a/views/home.jade
+++ b/views/home.jade
@@ -6,5 +6,5 @@ block content
     | Use this document as a way to quickly start any new project.
     br
     | All you get is this text and a mostly barebones HTML document.
-  if user
+  //- if user
     p=JSON.stringify(user)
