--- a/views/account/profile.jade
+++ b/views/account/profile.jade
@@ -9,21 +9,30 @@ block content
     .form-group
       label.col-sm-3.control-label(for='player') Starbound Name
       .col-sm-4
-        input.form-control(type='player', name='player', id='player', value='#{user.profile.player}')
+        if user.profile.rank === 'Recruit'
+          input.form-control(type='player', name='player', id='player', value='#{user.profile.player}')
+        else
+          input.form-control(type='player', name='player', id='player', value='#{user.profile.player}', disabled)
       .col-sm-4
         p whatever you use to vote with
     .form-group
       label.col-sm-3.control-label(for='forum') Forum Username
       .col-sm-4
-        input.form-control(type='forum', name='forum', id='forum', value='#{user.profile.forum}')
+        if user.profile.rank === 'Recruit'
+          input.form-control(type='forum', name='forum', id='forum', value='#{user.profile.forum}')
+        else
+          input.form-control(type='forum', name='forum', id='forum', value='#{user.profile.forum}', disabled)
     //- .form-group
       label.col-sm-3.control-label(for='invites') Invites
       .col-sm-4
         input.form-control(type='text', name='invites', id='invites', value='#{user.invites}', disabled)
     .form-group
-      label.col-sm-3.control-label(for='email') Email
+      label.col-sm-3.control-label(for='email') Email (Login)
       .col-sm-4
-        input.form-control(type='email', name='email', id='email', value='#{user.email}')
+        if user.profile.rank === 'Recruit'
+          input.form-control(type='email', name='email', id='email', value='#{user.email}')
+        else
+          input.form-control(type='email', name='email', id='email', value='#{user.email}', disabled)
     .form-group
       label.col-sm-3.control-label(for='name') TeamSpeak Handle
       .col-sm-4
@@ -93,36 +102,3 @@ block content
     button.btn.btn-danger(type='submit')
       i.fa.fa-trash-o
       | Delete my account
-
-  .page-header
-    h3 Linked Accounts
-
-  if secrets.googleAuth
-    if user.google
-      p: a.text-danger(href='/account/unlink/google') Unlink your Google account
-    else
-      p: a(href='/auth/google') Link your Google account
-
-  if secrets.facebookAuth
-    if user.facebook
-      p: a.text-danger(href='/account/unlink/facebook') Unlink your Facebook account
-    else
-      p: a(href='/auth/facebook') Link your Facebook account
-
-  if secrets.twitterAuth
-    if user.twitter
-      p: a.text-danger(href='/account/unlink/twitter') Unlink your Twitter account
-    else
-      p: a(href='/auth/twitter') Link your Twitter account
-
-  if secrets.githubAuth
-    if user.github
-      p: a.text-danger(href='/account/unlink/github') Unlink your GitHub account
-    else
-      p: a(href='/auth/github') Link your GitHub account
-
-  if secrets.linkedinAuth
-    if user.linkedin
-      p: a.text-danger(href='/account/unlink/linkedin') Unlink your LinkedIn account
-    else
-      p: a(href='/auth/linkedin') Link your LinkedIn account
