--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -49,6 +49,7 @@ a:after {
 .navbar .container {
   background: none;
   border: none;
+  padding: 0;
 }
 
 .navbar-fixed-top {
@@ -60,7 +61,20 @@ a:after {
 .container {
   background: rgba( 24, 24, 24, 0.7 );
   border: 1px solid white;
+  padding-bottom: 50px;
 }
+
+a.navbar-brand {
+  background: none;
+  padding-left: 0;
+}
+.navbar-brand img {
+  width: 230px;
+  position: relative;
+  top: -24px;
+}
+
+
 
 // Scaffolding
 // -------------------------
