--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -7,6 +7,7 @@
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href='/')
+        img(src='/assets/img/logo.png')
     .collapse.navbar-collapse
       ul.nav.navbar-nav
         li(class=title=='Boundstar'?'active':undefined)
