--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -14,8 +14,20 @@
           a(href='/home') Home
         li(class=title=='Rank Manager'?'active':undefined)
           a(href='/rank') Rank
-        //- li(class=title=='API Browser'?'active':undefined)
-          a(href='/api') API Browser
+        li.dropdown(class=title=='Worlds'?'active':undefined)
+          a.dropdown-toggle(href='#', data-toggle='dropdown') Worlds
+          ul.dropdown-menu
+            li: a(href='/worlds/alpha') Alpha Sector
+            li.divider
+            li: a(href='/worlds/beta') Beta Sector
+            li.divider
+            li: a(href='/worlds/delta') Delta Sector
+            li.divider
+            li: a(href='/worlds/gamma') Gamma Sector
+            li.divider
+            li: a(href='/worlds/sectorx') SectorX
+            li.divider
+
         //- li(class=title=='Contact'?'active':undefined)
           a(href='/contact') Contact
       ul.nav.navbar-nav.navbar-right
