--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -15,7 +15,8 @@
         li(class=title=='Rank Manager'?'active':undefined)
           a(href='/rank') Rank
         li.dropdown(class=title=='Worlds'?'active':undefined)
-          a.dropdown-toggle(href='#', data-toggle='dropdown') Worlds
+          a.dropdown-toggle(href='#', data-toggle='dropdown') Worlds 
+            i.caret
           ul.dropdown-menu
             li: a(href='/worlds/alpha') Alpha Sector
             li.divider
