--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -6,7 +6,8 @@
       br
       br
       br
-      h3.online Players Online: 
+      h3.online
         span#numOnline
+        |  Players Online
       ul#players.players
       p *this is a live updated list
