--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -95,11 +95,14 @@ img {
 //   -o-transition: color 0.1s ease-in, background 0.1s ease-in;
 //   transition: color 0.1s ease-in, background 0.1s ease-in;
 // }
-
+.players ul li {
+  list-style: none;
+}
 .navbar .container {
   background: none;
   border: none;
   padding: 0;
+  width: 95%;
 }
 
 .navbar-fixed-top {
