--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -95,8 +95,10 @@ img {
 //   -o-transition: color 0.1s ease-in, background 0.1s ease-in;
 //   transition: color 0.1s ease-in, background 0.1s ease-in;
 // }
-.players ul li {
+.players ul {
   list-style: none;
+  margin: 0; 
+  padding: 0 0 0 10px;
 }
 .navbar .container {
   background: none;
