--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -96,9 +96,11 @@ img {
 //   transition: color 0.1s ease-in, background 0.1s ease-in;
 // }
 .players ul {
-  list-style: none;
   margin: 0; 
   padding: 0 0 0 10px;
+  .li {
+    list-style: none;
+  }
 }
 .navbar .container {
   background: none;
