--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -95,10 +95,10 @@ img {
 //   -o-transition: color 0.1s ease-in, background 0.1s ease-in;
 //   transition: color 0.1s ease-in, background 0.1s ease-in;
 // }
-.players ul {
+#players ul {
   margin: 0; 
   padding: 0 0 0 10px;
-  .li {
+  li {
     list-style: none;
   }
 }
