--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -2,7 +2,7 @@
 @import (less) "lib/font-awesome.min.css";
 @import "lib/bootstrap/bootstrap";
 @import "lib/bootstrap-social";
-@import "themes/default";
+@import "themes/today";
 
 body {
   background-color: black;
@@ -95,13 +95,7 @@ img {
 //   -o-transition: color 0.1s ease-in, background 0.1s ease-in;
 //   transition: color 0.1s ease-in, background 0.1s ease-in;
 // }
-#players ul {
-  margin: 0; 
-  padding: 0 0 0 10px;
-  li {
-    list-style: none;
-  }
-}
+
 .navbar .container {
   background: none;
   border: none;
@@ -131,8 +125,16 @@ a.navbar-brand {
   position: relative;
   top: -24px;
 }
+
 .sidebar-brand {
   padding: 20px;
+}
+#players {
+  margin: 0; 
+  padding: 0 0 0 10px;
+  li {
+    list-style: none;
+  }
 }
 
 
