--- a/views/home.jade
+++ b/views/home.jade
@@ -6,8 +6,30 @@ block content
   //- p=JSON.stringify(admins)
   if user
     if user.profile.player
-      h1 Welcome #{user.profile.player}
-      p Rank: #{user.profile.rank}
+      .page-header
+        h1 Welcome #{user.profile.player}
+      h4 Your Rank is 
+        strong #{user.profile.rank}
+      //- .row
+        .well.col-sm-2#connections
+            h3 Right Now
+            p 
+              span#numOnline
+            h5 active players
+        .col-sm-10
+          legend Rank
+          table#visits.table.table-bordered.table-striped.table-condensed
+            thead
+              tr
+                td #{user.profile.rank}
+            tbody
+          legend Worlds
+          table#pageViews.table.table-bordered.table-striped.table-condensed
+            thead
+              tr
+                td Sector
+                td Coordinates
+            tbody
     else
       h1 Go to your 
         a(href='/account') profile
@@ -15,7 +37,8 @@ block content
 
   if servers
     div
-      h2.page-header Servers
+      .page-header
+        h2 Servers
       each server, i in servers
         if admins[i].starbound_password === ''
           .col-sm-4
@@ -28,7 +51,8 @@ block content
                 img(src='http://starrydex.com/img/Crash.svg' style='max-width:100%;')
               default
                 img(src='http://starrydex.com/img/TinyTower.svg' style='max-width:100%;')
-            h2.page-header #{server.ip_address}
+            .page-header
+              h2 #{server.ip_address}
             p Public
             if server.size_id == '61'
               p 8 core server
