--- a/views/rank.jade
+++ b/views/rank.jade
@@ -51,25 +51,26 @@ block content
     br
     .page-header
       h2 Your Worlds
-    if worlds
-      //- p=JSON.stringify(worlds)
-      each world in worlds
-        if world.owner == user.profile.player
-          .col-sm-6
-            //- p!=JSON.stringify(world)
-            h3 #{world.nickname}
-            p #{world.name}
-            p #{world.system}
-            p #{world.owner}
-            p #{world.description}
-            p
-              a(href='/world/#{world.world_coords}')
-                span.label.label-warning #{world.world_coords}
-            p
-            if world.saves
-              p.text-warning 
-                span.badge #{world.saves.length}
-                if world.saves.length == '1'
-                  |  Restore Point
-                else
-                  |  Restore Points 
+    if user.profile.player != ''
+      if worlds
+        //- p=JSON.stringify(worlds)
+        each world in worlds
+          if world.owner == user.profile.player
+            .col-sm-6
+              //- p!=JSON.stringify(world)
+              h3 #{world.nickname}
+              p #{world.name}
+              p #{world.system}
+              p #{world.owner}
+              p #{world.description}
+              p
+                a(href='/world/#{world.world_coords}')
+                  span.label.label-warning #{world.world_coords}
+              p
+              if world.saves
+                p.text-warning 
+                  span.badge #{world.saves.length}
+                  if world.saves.length == '1'
+                    |  Restore Point
+                  else
+                    |  Restore Points 
