--- a/views/home.jade
+++ b/views/home.jade
@@ -1,10 +1,23 @@
 extends layout
 
 block content
-  
-  h1 Welcome to Boundstar
+  .page-header
+    h1 Welcome to Boundstar
   p Be sure to make your forum account, set your name and rank yourself up to player!
-  
+  br
+  .col-sm-2
+    form(action='https://www.paypal.com/cgi-bin/webscr'. method='post'. target='_top')
+      input(type='hidden', name='cmd', value='_s-xclick')
+      input(type='hidden', name='hosted_button_id', value='9HGYPBBJV8954')
+      input(type='image', src='https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif', border='0', name='submit', alt='PayPal - The safer, easier way to pay online!')
+      img(alt='', border='0', src='https://www.paypalobjects.com/en_US/i/scr/pixel.gif', width='1', height='1')
+  .col-sm-2
+    a(href='/signup').btn.btn-primary Register
+  .col-sm-2
+    a(href='/forum.boundstar.com').btn.btn-primary Forums
+  .col-sm-4
+    script(src='http://starbound-servers.net/embed.js?id=313&type=votes&size=small')
+  .clearfix
   //- p=JSON.stringify(servers)
   //- p=JSON.stringify(admins)
   if user
