remove home link

--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -10,7 +10,7 @@
         img(src='/assets/img/logo.png')
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        li(class=title=='Boundstar'?'active':undefined)
+        //- li(class=title=='Boundstar'?'active':undefined)
           a(href='/home') Home
         li(class=title=='Rank Manager'?'active':undefined)
           a(href='/rank') Rank
