--- a/views/home.jade
+++ b/views/home.jade
@@ -14,7 +14,7 @@ block content
   .col-sm-2
     a(href='/signup').btn.btn-primary Register
   .col-sm-2
-    a(href='/forum.boundstar.com').btn.btn-primary Forums
+    a(href='http://forum.boundstar.com').btn.btn-primary Forums
   .col-sm-4
     script(src='http://starbound-servers.net/embed.js?id=313&type=votes&size=small')
   .clearfix
