--- a/views/home.jade
+++ b/views/home.jade
@@ -56,7 +56,8 @@ block content
       .page-header
         h2 Servers
       each server, i in servers
-        if admins[i].starbound_password === ''
+        //- h1=JSON.stringify( server )
+        if admins[i].starbound_password == ''
           .col-sm-4
             case server.ip_address
               when '107.170.30.45'
@@ -69,13 +70,19 @@ block content
                 img(src='http://starrydex.com/img/TinyTower.svg' style='max-width:100%;')
             .page-header
               h2 #{server.ip_address}
-            p Public
-            if server.size_id == '61'
-              p 8 core server
+            if server.ip_address == '107.170.30.45'
+              p Members Only - 
+                a(href='/signup') Register
+                |  to get the password.
             else
-              p 2 core server
-              //- p #{info[i].playersOnline.length} Players Online
-              //- p Game Port: #{info[i].gamePort}
+              p Public
+            case server.size_id
+              when 61
+                p 8 core server
+              when 65
+                p 4 core server
+              default
+                p 2 core server
             if server.ip_address == '107.170.56.96'
               p(style='color:black')
                 input(value='boundstar.com',style='width:120px;',onclick='this.select()')
@@ -87,3 +94,41 @@ block content
                 a(href='http://boundstar.com/') Web Site
             p
               a(href='http://#{server.ip_address}') CommandStar
+        else
+          if server.ip_address == '107.170.30.45'
+            .col-sm-4
+              case server.ip_address
+                when '107.170.30.45'
+                  img(src='http://starrydex.com/img/ApeFlu.svg' style='max-width:100%;')
+                when '107.170.56.96'
+                  img(src='http://starrydex.com/img/BoundStar.svg' style='max-width:100%;')
+                when '107.170.45.151'
+                  img(src='http://starrydex.com/img/Crash.svg' style='max-width:100%;')
+                default
+                  img(src='http://starrydex.com/img/TinyTower.svg' style='max-width:100%;')
+              .page-header
+                h2 #{server.ip_address}
+              p Private, register to get password
+              if user
+                if user.profile
+                  if user.profile.rank != ''
+                p Password: #{admins[i].starbound_password}
+              case server.size_id
+                when 61
+                  p 8 core server
+                when 65
+                  p 4 core server
+                default
+                  p 2 core server
+              if server.ip_address == '107.170.56.96'
+                p(style='color:black')
+                  input(value='boundstar.com',style='width:120px;',onclick='this.select()')
+              else
+                p(style='color:black')
+                  input(value='#{server.ip_address}',style='width:120px;',onclick='this.select()')
+              if server.ip_address == '107.170.56.96'
+                p
+                  a(href='http://boundstar.com/') Web Site
+              p
+                a(href='http://#{server.ip_address}') CommandStar
+
