--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,7 +36,7 @@ html
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-    script(src='/status/socket.io/socket.io.js')
+    script(src='http://boundstar.com/status/socket.io/socket.io.js')
     script.
       var setPlayersOnline = function( players ) {
         $('#players li').remove();
