--- a/views/players.jade
+++ b/views/players.jade
@@ -7,7 +7,7 @@ block content
   
   .page-header
     h2 #{title}
-  p We have 
+  p We have seen 
     strong #{players.length}
     |  players
     each player in players
