--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -10,8 +10,8 @@
         img(src='/assets/img/logo.png')
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        //- li(class=title=='Boundstar'?'active':undefined)
-          a(href='/home') Home
+        li(class=title=='Boundstar'?'active':undefined)
+          a(href='/') Home
         li(class=title=='Rank Manager'?'active':undefined)
           a(href='/rank') Rank
         li(class=title=='Player Manager'?'active':undefined)
