--- a/views/home.jade
+++ b/views/home.jade
@@ -7,7 +7,7 @@ block content
     if user.profile.player
       .page-header
         h1 Welcome to Boundstar
-      p Be sure to make your forum account, set your name and rank yourself up to player!
+      p Be sure to make your forum account, set your name and rank yourself up to Player!
       br
       .col-sm-2
         form(action='https://www.paypal.com/cgi-bin/webscr'. method='post'. target='_top')
@@ -24,7 +24,9 @@ block content
       .clearfix
       .page-header
         h1 Hello #{user.profile.player}
-      h4 Your Rank is 
+      h4 Your 
+        a(href='/rank') Rank
+        |  is 
         strong #{user.profile.rank}
       //- .row
         .well.col-sm-2#connections
